--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         }
     ],
     "require-dev": {
-        "mockery/mockery": "0.8.0",
-        "phpunit/phpunit": "3.7.*"
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "4.1.*"
     },
     "autoload": {
         "psr-0": {
